2001-11-09  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b3)

	* Fixed the annoying bug where if you modify the admin account using
	  the [manage users] interface it would log you out and you'd lose the
	  admin-ness of that account.

2001-11-05  Chris Smith  <chris@jacko.com> (1.2.3-cvs-b2)

	* No longer use the array_reverse function, as some older php
	  installations complain about the two parameter version of it.

2001-11-05  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b1)

	* Added config wizard option to disable usage of flock(), since it
	  doesn't work in all environments.

2001-11-01  Bharat Mediratta  <bharat@menalto.com> (1.2.2)

	* v1.2.2 ships!

	* Added a fix to index.php so that it now detects it's Nuke module
	  name.  Now, you don't need to modify this variable by hand if you
	  rename your Gallery directory.

2001-10-29  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b6)

	* In NetPBM 9.19, they renamed "ppmtojpeg" to "pnmtojpeg".  Argh!  So,
	  we need to be able to use whichever binary is handy.  Search for both
	  of them and then add a special case constant to tell us which binary
	  we located on the machine (so we know which one to use!).

	  This requires a change in the config version which means that you'll
	  be forced to re-run the config wizard.

2001-10-26  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b5)

	* Adjusted capture_hours dropdown to include the 0 hour (12AM). Thanks
	  to Dan Wood for the catch/patch.

	* Fixed bug #475151: Album link always goes to page 1.  We now track
	  the most recently viewed page of each album in the session and return
	  to that page.  

	* (chris) Changed the vertical alignment of the caption for clarity.

2001-10-16  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b4)

	* platform/fs_win32: fixed a bug where we were using a form of of 
	  str_replace that only works on PHP 4.0.5+

	* Made the serialization code more robust by checking to see if any