@@ -1,3 +1,9 @@
+2001-11-11  Chris Smith <chris@jacko.com> (1.2.3-cvs-b4)
+
+	* Added Gallery Remote communication script. Added link in 
+	  add_photos.php to direct the user to the Gallery Remote
+	  download page.
+
 2001-11-09  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b3)
 
 	* Fixed the annoying bug where if you modify the admin account using
